; ModuleID = '/home/carl/AnghaBench/linux/net/openvswitch/extr_flow.c_ovs_flow_key_update.c'
source_filename = "/home/carl/AnghaBench/linux/net/openvswitch/extr_flow.c_ovs_flow_key_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.sw_flow_key = type { i32 }

@SW_FLOW_KEY_INVALID = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ovs_flow_key_update(%struct.sk_buff* %0, %struct.sw_flow_key* %1) #0 {
  %3 = alloca %struct.sk_buff*, align 8
  %4 = alloca %struct.sw_flow_key*, align 8
  %5 = alloca i32, align 4
  store %struct.sk_buff* %0, %struct.sk_buff** %3, align 8
  store %struct.sw_flow_key* %1, %struct.sw_flow_key** %4, align 8
  %6 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  %7 = load %struct.sw_flow_key*, %struct.sw_flow_key** %4, align 8
  %8 = call i32 @key_extract(%struct.sk_buff* %6, %struct.sw_flow_key* %7)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %18, label %11

11:                                               ; preds = %2
  %12 = load i32, i32* @SW_FLOW_KEY_INVALID, align 4
  %13 = xor i32 %12, -1
  %14 = load %struct.sw_flow_key*, %struct.sw_flow_key** %4, align 8
  %15 = getelementptr inbounds %struct.sw_flow_key, %struct.sw_flow_key* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = and i32 %16, %13
  store i32 %17, i32* %15, align 4
  br label %18

18:                                               ; preds = %11, %2
  %19 = load i32, i32* %5, align 4
  ret i32 %19
}

declare dso_local i32 @key_extract(%struct.sk_buff*, %struct.sw_flow_key*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
